--- a/src/views/includes/files/_scripts.pug
+++ b/src/views/includes/files/_scripts.pug
@@ -15,7 +15,7 @@ block external-js
     crossorigin="anonymous")
 
 block custom-js
-  script#unikorn(src="js/vendor/unikorn.umd.min.js")
+  script#unikorn(src="js/vendor/unikorn.min.js")
   script#inline-script(src="js/script.min.js" inline)
   //- script#main-script(src="js/script.min.js")
   //- script#script(src="js/script.js" inline)
