--- a/src/views/includes/cards/_cards.pug
+++ b/src/views/includes/cards/_cards.pug
@@ -1,65 +1,49 @@
 //- includes/cards/_cards.pug
+include ../../mixins/_cards-picture
+
 section.cards#cards
   .container
     .row
       .card-deck
         .col-xs-12.col-sm-6.col-lg-4
           .card.card-dark.invisible
-            picture.lozad-picture.card-img.img-fluid(data-iesrc="images/cards/landscape_tree_black.jpg")
-              source(type="image/webp" srcset="images/cards/landscape_tree_black.webp")
-              source(type="image/jpeg" srcset="images/cards/landscape_tree_black.jpg")
-              noscript: img(src="images/cards/landscape_tree_black.jpg" alt="Card image cap")
+            +cardsPicture("landscape_tree_black", "Smart Solutions")
             .card-img-overlay.card-d-flex.position-relative
               h4.card-title Smart Solutions
               p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
               a.btn.btn-outline-orange.card-link(href="#!") Click here
         .col-xs-12.col-sm-6.col-lg-4
           .card.card-dark.invisible
-            picture.lozad-picture.card-img.img-fluid(data-iesrc="images/cards/lighthouse_lantern_sky_storm_night.jpg")
-              source(type="image/webp" srcset="images/cards/lighthouse_lantern_sky_storm_night.webp")
-              source(type="image/jpeg" srcset="images/cards/lighthouse_lantern_sky_storm_night.jpg")
-              noscript: img(src="images/cards/lighthouse_lantern_sky_storm_night.jpg" alt="Card image cap")
+            +cardsPicture("lighthouse_lantern_sky_storm_night", "Web Design")
             .card-img-overlay.card-d-flex.position-relative
               h4.card-title Web Design
               p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
               a.btn.btn-outline-orange.card-link(href="#!") Click here
         .col-xs-12.col-sm-6.col-lg-4
           .card.card-dark.invisible
-            picture.lozad-picture.card-img.img-fluid(data-iesrc="images/cards/road_sunset_marking_grass.jpg")
-              source(type="image/webp" srcset="images/cards/road_sunset_marking_grass.webp")
-              source(type="image/jpeg" srcset="images/cards/road_sunset_marking_grass.jpg")
-              noscript: img(src="images/cards/road_sunset_marking_grass.jpg" alt="Card image cap")
+            +cardsPicture("road_sunset_marking_grass", "Development")
             .card-img-overlay.card-d-flex.position-relative
               h4.card-title Development
               p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
               a.btn.btn-outline-orange.card-link(href="#!") Click here
         .col-xs-12.col-sm-6.col-lg-4
           .card.card-dark.invisible
-            picture.lozad-picture.card-img.img-fluid(data-iesrc="images/cards/rotation_light_background_dark.jpg")
-              source(type="image/webp" srcset="images/cards/rotation_light_background_dark.webp")
-              source(type="image/jpeg" srcset="images/cards/rotation_light_background_dark.jpg")
-              noscript: img(src="images/cards/rotation_light_background_dark.jpg" alt="Card image cap")
+            +cardsPicture("rotation_light_background_dark", "Email Campaign")
             .card-img-overlay.card-d-flex.position-relative
               h4.card-title Email Campaign
               p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
               a.btn.btn-outline-orange.card-link(href="#!") Click here
         .col-xs-12.col-sm-6.col-lg-4
           .card.card-dark.invisible
-            picture.lozad-picture.card-img.img-fluid(data-iesrc="images/cards/sea_surf_wave_sunset.jpg")
-              source(type="image/webp" srcset="images/cards/sea_surf_wave_sunset.webp")
-              source(type="image/jpeg" srcset="images/cards/sea_surf_wave_sunset.jpg")
-              noscript: img(src="images/cards/sea_surf_wave_sunset.jpg" alt="Card image cap")
+            +cardsPicture("sea_surf_wave_sunset", "Online Promotion")
             .card-img-overlay.card-d-flex.position-relative
               h4.card-title Online Promotion
               p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
               a.btn.btn-outline-orange.card-link(href="#!") Click here
         .col-xs-12.col-sm-6.col-lg-4
           .card.card-dark.invisible
-            picture.lozad-picture.card-img.img-fluid(data-iesrc="images/cards/sea_waves_rocks_beach_sunrise.jpg")
-              source(type="image/webp" srcset="images/cards/sea_waves_rocks_beach_sunrise.webp")
-              source(type="image/jpeg" srcset="images/cards/sea_waves_rocks_beach_sunrise.jpg")
-              noscript: img(src="images/cards/sea_waves_rocks_beach_sunrise.jpg" alt="Card image cap")
+            +cardsPicture("sea_waves_rocks_beach_sunrise", "Portfolio")
             .card-img-overlay.card-d-flex.position-relative
-              h4.card-title Portofoliu
+              h4.card-title Portfolio
               p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
               a.btn.btn-outline-orange.card-link(href="#!") Click here
