--- a/src/views/layout/_layout.pug
+++ b/src/views/layout/_layout.pug
@@ -1,25 +1,25 @@
 //- layout/_layout.pug
 html(lang="en" itemscope itemtype="http://schema.org/LocalBusiness" prefix="og: http://ogp.me/ns#")
 
-  include ../includes/head/_stamp
+  include ../includes/files/_stamp
   block setting
 
   head
     block head
-      include ../includes/head/_head
-      include ../includes/head/_statics
-      //- include ../includes/head/_opengraph
+      include ../includes/files/_head
+      include ../includes/files/_statics
+      //- include ../includes/files/_opengraph
     block fonts
       include ../includes/files/_fonts
     block styles
       include ../includes/files/_styles
     block head-js
-      //- include ../includes/head/_tagmanager
-      //- include ../includes/head/_analytics
+      //- include ../includes/files/_tagmanager
+      //- include ../includes/files/_analytics
 
   body
-    //- include ../includes/head/_facebook-sdk
-    //- include ../includes/head/_tagnoscript
+    //- include ../includes/files/_facebook-sdk
+    //- include ../includes/files/_tagnoscript
     main
       block navbar
         include ../includes/drawer/_drawer
