--- a/src/views/includes/cards/_cards.pug
+++ b/src/views/includes/cards/_cards.pug
@@ -7,39 +7,44 @@ section.cards#cards
       .card-deck
         .col-xs-12.col-sm-6.col-lg-4
           .card.card-dark.invisible
-            +cardsPicture("landscape_tree_black", "Smart Solutions")
-            .card-img-overlay.card-d-flex.position-relative
-              h4.card-title Smart Solutions
-              p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
-              a.btn.btn-outline-orange.card-link(href="#!") Click here
-        .col-xs-12.col-sm-6.col-lg-4
-          .card.card-dark.invisible
-            +cardsPicture("lighthouse_lantern_sky_storm_night", "Web Design")
+            +cardsPicture("landscape_tree_black", "Web Design")
             .card-img-overlay.card-d-flex.position-relative
               h4.card-title Web Design
               p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
               a.btn.btn-outline-orange.card-link(href="#!") Click here
+
         .col-xs-12.col-sm-6.col-lg-4
           .card.card-dark.invisible
-            +cardsPicture("road_sunset_marking_grass", "Development")
+            +cardsPicture("lighthouse_lantern_sky_storm_night", "Web Development")
             .card-img-overlay.card-d-flex.position-relative
-              h4.card-title Development
+              h4.card-title Web Dev
               p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
               a.btn.btn-outline-orange.card-link(href="#!") Click here
+
         .col-xs-12.col-sm-6.col-lg-4
           .card.card-dark.invisible
-            +cardsPicture("rotation_light_background_dark", "Email Campaign")
+            +cardsPicture("road_sunset_marking_grass", "Mobile Development")
             .card-img-overlay.card-d-flex.position-relative
-              h4.card-title Email Campaign
+              h4.card-title Mobile Dev
               p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
               a.btn.btn-outline-orange.card-link(href="#!") Click here
+
         .col-xs-12.col-sm-6.col-lg-4
           .card.card-dark.invisible
-            +cardsPicture("sea_surf_wave_sunset", "Online Promotion")
+            +cardsPicture("rotation_light_background_dark", "Web Applications")
             .card-img-overlay.card-d-flex.position-relative
-              h4.card-title Online Promotion
+              h4.card-title Web Apps
               p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
               a.btn.btn-outline-orange.card-link(href="#!") Click here
+
+        .col-xs-12.col-sm-6.col-lg-4
+          .card.card-dark.invisible
+            +cardsPicture("sea_surf_wave_sunset", "Smart Solutions")
+            .card-img-overlay.card-d-flex.position-relative
+              h4.card-title Smart Solutions
+              p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
+              a.btn.btn-outline-orange.card-link(href="#!") Click here
+
         .col-xs-12.col-sm-6.col-lg-4
           .card.card-dark.invisible
             +cardsPicture("sea_waves_rocks_beach_sunrise", "Portfolio")
