--- a/src/views/layout/_base.pug
+++ b/src/views/layout/_base.pug
@@ -8,7 +8,7 @@ html(lang="en" itemscope itemtype="http://schema.org/LocalBusiness" prefix="og: 
     block head
       include ../partials/_head
       include ../partials/_statics
-      //- include ../partials/_opengraph
+      include ../partials/_opengraph
     block fonts
       include ../partials/_fonts
     block styles
