--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -3,10 +3,10 @@
 // -----------------------------------------------------------------------------
 
 .card-deck {
-  margin: 0 0 3rem;
+  margin: 3rem 0 1rem;
 
   .card {
-    margin: 3rem 0 0;
+    margin: 0 0 2rem;
     border: 0 solid rgba(0, 0, 0, .125);
     box-shadow: 0 20px 30px rgba(0, 0, 0, .6);
     opacity: 0;
@@ -14,10 +14,10 @@
   }
 
   @media (min-width: 768px) {
-    margin: 2rem 0;
+    margin: 3rem 0 0;
 
     .card {
-      margin: 2rem 1rem;
+      margin: 0 1rem 3rem;
     }
   }
 }
