--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -2,8 +2,13 @@
 // Cards
 // -----------------------------------------------------------------------------
 
+.cards {
+  display: flex;
+  justify-content: center;
+}
+
 .card-deck {
-  margin: 3rem 0 1rem;
+  margin: 3.5rem 0 1rem;
 
   .card {
     margin: 0 0 2rem;
@@ -14,7 +19,7 @@
   }
 
   @media (min-width: 768px) {
-    margin: 3rem 0 0;
+    margin-bottom: .5rem;
 
     .card {
       margin: 0 1rem 3rem;
